# makepad-yelp

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/plans/: 2026-01-23-makepad-yelp-design.md  2026-01-26-yelp-ui-redesign.md
src/: app.rs  main.rs
src/data/: business.rs  mod.rs
src/screens/: map.rs  mod.rs  search.rs
src/widgets/: business_card.rs  mod.rs  search_bar.rs  tab_bar.rs
