[package]
name = "makepad-yelp"
version = "0.1.0"
edition = "2021"
description = "A Yelp clone built with Makepad framework"

[dependencies]
makepad-widgets = { path = "../makepad/widgets" }
makepad-map = { path = "../makepad-map" }

[lib]
name = "makepad_yelp"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
